# Network-Packet-ML-Model

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  config.py  full_model.ipynb  gru_model.ipynb  inml_model.ipynb  knowledge_distillation.py  load_models.py  lstm_model.ipynb  mlp_model.ipynb  model.py  model_config.py  parse_dataset.py  requirements.txt  split_model.py  train.py  transfer_tensors.py
benchmark/: get_diff.py  test_plot.ipynb
compact/: __init__.py  knowledge_distillation.py  pruning.py  quantization.py
data/: __init__.py  dataset.py  label_index.json
distilled_models/: distilled_gru_model.ipynb  distilled_lstm_model.ipynb  distilled_mlp_model.ipynb  distilled_split_model.ipynb
dma_transfer/: dma_copy_dpu.c  dma_copy_host.c  dma_transfer.c  dma_transfer.h  socket_transfer  socket_transfer.c  socket_transfer.h  socket_transfer_dpu.py  socket_transfer_host.py  testc.py
large_models/: 1dcnn_model.ipynb  gru_model.ipynb  inference.ipynb  lstm_model.ipynb  mlp_model.ipynb  split_model.ipynb
loss_functions/: __init__.py  kd_loss.py  loss.py
model/: __init__.py  cnn.py  gru.py  lstm.py  mlp.py  split_model.py
model_inference/: inference_on_host.ipynb  inference_split_model.ipynb  split_light_model_dpu.ipynb  split_model_dpu.ipynb  split_model_host.ipynb  test_inference.ipynb  test_split_dpu.ipynb  test_split_host.ipynb  test_split_model.ipynb
models/: gru.py  lstm.py  mlp.py  model.py  split_model.py
socket_transfer/: makefile  socket_transfer.c
split_models/: split_gru_model.ipynb  split_lstm_model.ipynb  split_mlp_model.ipynb
(+285 files in other folders)
